--- a/app/templates/angle_converter.html
+++ b/app/templates/angle_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供角度单位转换器，支持度、弧度、百分度、转、分、秒等多种角度单位的转换，方便快捷。">
     <title>角度单位转换器</title>
     <link rel="stylesheet" href="/static/css/angle_converter.css">
 </head>
