--- a/app/templates/area_converter.html
+++ b/app/templates/area_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供面积单位转换器，支持平方米、平方千米、公顷、亩、平方英里、英亩等多种面积单位的转换，方便快捷。">
     <title>面积单位转换器</title>
     <link rel="stylesheet" href="/static/css/area_converter.css">
 </head>
