--- a/app/templates/ascii_art.html
+++ b/app/templates/ascii_art.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供ASCII艺术生成器，将图片转换为ASCII艺术，支持多种字体和字符集选择，方便快捷。">
     <title>ASCII艺术生成器</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/ascii_art.css') }}">
 </head>
