--- a/app/templates/base64_encoder.html
+++ b/app/templates/base64_encoder.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供Base64编码器/解码器，支持文本和文件的Base64编码和解码，方便快捷。">
     <title>Base64编码器</title>
     <link rel="stylesheet" href="/static/css/base64_encoder.css">
 </head>
