--- a/app/templates/binary_converter.html
+++ b/app/templates/binary_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供字符二进制转换工具，支持UTF-8、UTF-16、ASCII、GBK、GB2312、Big5、ISO-8859-1等多种编码格式，方便快捷。">
     <title>字符二进制转换</title>
     <style>
         @import url("{{ url_for('static', filename='css/binary_converter.css') }}");
