--- a/app/templates/bmi_calculator.html
+++ b/app/templates/bmi_calculator.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供BMI计算器，计算身体质量指数，评估体重状况，支持身高和体重输入，显示BMI值和分类。">
     <title>BMI计算器 - 身体质量指数计算</title>
     <link rel="stylesheet" href="/static/css/bmi_calculator.css">
 </head>
