--- a/app/templates/calculator.html
+++ b/app/templates/calculator.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供多功能计算器，支持标准、科学、程序员、日期、货币、容量、长度、重量、温度、能量、面积、速度、时间、功率、数据、压力、角度等多种计算功能，方便快捷。">
     <title>多功能计算器</title>
     <link rel="stylesheet" href="/static/css/calculator.css" />
 </head>
