--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供在线聊天室，支持好友列表、消息发送和接收、添加好友等功能，方便快捷。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>聊天</title>
     <link rel="stylesheet" href="/static/css/chat.css">
