--- a/app/templates/checkers.html
+++ b/app/templates/checkers.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供跳棋游戏，支持红方和黑方对战，提供落子记录、当前回合、红方和黑方得分、协调世界时、游戏时长、总时间、当前手、红方时间、黑方时间等功能，方便快捷。">
     <title>跳棋</title>
     <link rel="stylesheet" href="/static/css/checkers.css">
 </head>
