--- a/app/templates/cmd_commands.html
+++ b/app/templates/cmd_commands.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="常用控制台命令及其参数的详细说明。">
+    <meta name="description" content="资源77提供常用控制台命令及其参数的详细说明，包括ls、cd、mkdir、rm、cp、mv、touch、cat、grep、find、chmod、chown、ps、top、kill、df、du、tar、unzip、wget、curl、ssh、scp、ping、netstat、ifconfig、traceroute、dig、whois、nslookup等命令的用法和参数说明。">
     <title>控制台命令详解</title>
     <link rel="stylesheet" href="/static/css/cmd_commands.css">
 </head>
