--- a/app/templates/color_palette.html
+++ b/app/templates/color_palette.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供调色板工具，支持主色调选择、色彩方案选择、色调数量选择、亮度范围选择、饱和度范围选择等功能，方便快捷。">
     <title>调色板工具</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/color_palette.css') }}">
 </head>
