--- a/app/templates/color_picker.html
+++ b/app/templates/color_picker.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供颜色选择器，支持HEX、RGB、HSL、CMYK等多种颜色格式选择，方便快捷。">
     <title>颜色选择器</title>
     <link rel="stylesheet" href="/static/css/color_picker.css">
 </head>
