--- a/app/templates/crontab_generator.html
+++ b/app/templates/crontab_generator.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供Cron表达式生成器，支持简单模式和高级模式，方便快捷。">
     <title>Cron表达式生成器</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/crontab_generator.css') }}">
 </head>
