--- a/app/templates/daily.html
+++ b/app/templates/daily.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
+        <meta name="description" content="资源77提供日常记录，包括网站更新、节日祝福、重要事件等，方便快捷。">
         <title>日常</title>
         <link rel="stylesheet" href="/static/css/daily.css" />
     </head>
