--- a/app/templates/encoding_converter.html
+++ b/app/templates/encoding_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供编码转换器，支持Base64、URL编码、Unicode、HTML实体、十六进制、二进制、摩尔斯电码等多种编码格式转换，方便快捷。">
     <title>编码转换器</title>
     <link rel="stylesheet" href="/static/css/encoding_converter.css">
 </head>
