--- a/app/templates/energy_converter.html
+++ b/app/templates/energy_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供能量单位转换器，支持焦耳、千焦、卡路里、千卡、瓦时、千瓦时、电子伏、英热单位等多种能量单位的转换，方便快捷。">
     <title>能量单位转换器</title>
     <link rel="stylesheet" href="/static/css/energy_converter.css">
 </head>
