--- a/app/templates/go.html
+++ b/app/templates/go.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供围棋游戏，支持黑方和白方对战，提供落子记录、当前回合、黑方和白方提子、黑方和白方领地、协调世界时、游戏时长、总时间、当前手、黑方时间、白方时间等功能，方便快捷。">
     <title>围棋</title>
     <link rel="stylesheet" href="/static/css/go.css">
 </head>
