--- a/app/templates/gomoku.html
+++ b/app/templates/gomoku.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供五子棋游戏，支持黑棋和白棋对战，提供落子记录、当前回合、黑棋和白棋得分、协调世界时、游戏时长、总时间、当前手、黑棋时间、白棋时间等功能，方便快捷。">
     <title>五子棋</title>
     <link rel="stylesheet" href="/static/css/gomoku.css">
 </head>
