--- a/app/templates/hash_calculator.html
+++ b/app/templates/hash_calculator.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供哈希计算器，支持MD5、SHA-1、SHA-256、SHA-512、SHA-3、RIPEMD160等多种哈希算法计算，方便快捷。">
     <title>哈希计算器</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/hash_calculator.css') }}">
