--- a/app/templates/image_processor.html
+++ b/app/templates/image_processor.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供图片处理工具，支持图片裁剪、旋转、缩放、亮度、对比度、饱和度、色相、滤镜、锐化、噪点、晕影、文字水印、尺寸调整、旋转与翻转等功能，方便快捷。">
     <title>图片处理工具</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/image_processor.css') }}">
 </head>
