--- a/app/templates/ip_lookup.html
+++ b/app/templates/ip_lookup.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供IP地址查询工具，支持IP地址查询、域名查询、地理位置查询、网络信息查询、安全信息查询等功能，方便快捷。">
     <title>IP地址查询</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/ip_lookup.css') }}">
 </head>
