--- a/app/templates/js_minifier.html
+++ b/app/templates/js_minifier.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供JavaScript压缩工具，支持JavaScript代码压缩、美化、混淆、压缩等功能，方便快捷。">
     <title>JavaScript压缩工具</title>
     <link rel="stylesheet" href="/static/css/js_minifier.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.7.0/styles/github.min.css">
