--- a/app/templates/json_formatter.html
+++ b/app/templates/json_formatter.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供JSON格式化工具，支持JSON代码格式化、美化、压缩、转义等功能，方便快捷。">
     <title>JSON格式化工具</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/json_formatter.css') }}">
 </head>
