--- a/app/templates/length_converter.html
+++ b/app/templates/length_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供长度单位转换器，支持米、千米、厘米、毫米、英里、码、英尺、英寸等多种长度单位的转换，方便快捷。">
     <title>长度单位转换器</title>
     <link rel="stylesheet" href="/static/css/length_converter.css">
 </head>
