--- a/app/templates/loading.html
+++ b/app/templates/loading.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供欢迎页面，包括背景动画层、主要内容、光效果、进度条、装饰元素等，方便快捷。">
     <title>欢迎</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/loading.css') }}">
 </head>
