--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,6 +3,7 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
+        <meta name="description" content="资源77提供登录页面，支持用户名和密码登录，方便快捷。">
         <title>登录</title>
         <link rel="stylesheet" href="/static/css/login.css" />
     </head>
