--- a/app/templates/math.html
+++ b/app/templates/math.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供在线数学题目生成器，支持随机数学题目快速生成，方便快捷。">
     <title>在线数学题目生成器 - 随机数学题目快速生成</title>
     <link rel="stylesheet" href="/static/css/math.css" />
 </head>
