--- a/app/templates/morse_code.html
+++ b/app/templates/morse_code.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供摩尔斯电码转换器，支持文本和摩尔斯电码之间的转换，方便快捷。">
     <title>摩尔斯电码转换器</title>
     <link rel="stylesheet" href="/static/css/morse_code.css">
 </head>
