--- a/app/templates/network_test.html
+++ b/app/templates/network_test.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供网络连通性测试工具，支持目标主机连通性测试、持续测试、间隔测试、测试结果导出等功能，方便快捷。">
     <title>网络连通性测试</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/network_test.css') }}">
 </head>
