--- a/app/templates/notepad.html
+++ b/app/templates/notepad.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供记事本，支持文本编辑、保存、打开、新建、撤销、重做、清空等功能，方便快捷。">
     <title>记事本 - 在线文本编辑器</title>
     <link rel="stylesheet" href="/static/css/notepad.css">
 </head>
