--- a/app/templates/paint.html
+++ b/app/templates/paint.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供在线画图工具，支持铅笔、橡皮擦、直线、矩形、圆形、文本、填充等功能，方便快捷。">
     <title>在线画图工具</title>
     <link rel="stylesheet" href="/static/css/paint.css">
 </head>
