--- a/app/templates/power_converter.html
+++ b/app/templates/power_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供功率单位转换器，支持瓦特、千瓦、兆瓦、马力、焦耳/秒、英热单位/小时、卡路里/秒、千卡/小时等多种功率单位的转换，方便快捷。">
     <title>功率单位转换器</title>
     <link rel="stylesheet" href="/static/css/power_converter.css">
 </head>
