--- a/app/templates/pressure_converter.html
+++ b/app/templates/pressure_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供压力单位转换器，支持帕斯卡、千帕、兆帕、大气压、巴、毫巴、磅/平方英寸、毫米汞柱等多种压力单位的转换，方便快捷。">
     <title>压力单位转换器</title>
     <link rel="stylesheet" href="/static/css/pressure_converter.css">
 </head>
