--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
+        <meta name="description" content="资源77提供项目页面，包括自建的资源站、一些自己写的文档、一些科技感背景等，方便快捷。">
         <title>项目</title>
         <link rel="stylesheet" href="/static/css/project.css" />
     </head>
