--- a/app/templates/qrcode_generator.html
+++ b/app/templates/qrcode_generator.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供二维码生成器，支持网址、文本、WiFi、联系人、邮件、短信等多种二维码生成，方便快捷。">
     <title>二维码生成器</title>
     <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/qrcode_generator.css') }}">
