--- a/app/templates/random_number.html
+++ b/app/templates/random_number.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供随机数生成器，支持随机数字序列生成、随机小数序列生成、随机字符序列生成、随机日期时间序列生成等功能，方便快捷。">
     <title>随机数生成器 - 生成随机数字序列</title>
     <link rel="stylesheet" href="/static/css/random_number.css">
 </head>
