--- a/app/templates/regex_tester.html
+++ b/app/templates/regex_tester.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供正则表达式测试工具，支持正则表达式测试、正则表达式生成、正则表达式优化、正则表达式验证等功能，方便快捷。">
     <title>正则表达式测试工具</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/regex_tester.css') }}">
 </head>
