--- a/app/templates/roman_numerals.html
+++ b/app/templates/roman_numerals.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供罗马数字转换器，支持阿拉伯数字和罗马数字之间的转换，方便快捷。">
     <title>罗马数字转换器</title>
     <link rel="stylesheet" href="/static/css/roman_numerals.css">
 </head>
