--- a/app/templates/simple_todo.html
+++ b/app/templates/simple_todo.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供简单待办事项，支持任务添加、任务列表、任务过滤、任务统计、任务提示等功能，方便快捷。">
     <title>简单待办事项 - 任务清单管理工具</title>
     <link rel="stylesheet" href="/static/css/simple_todo.css">
 </head>
