--- a/app/templates/speed_converter.html
+++ b/app/templates/speed_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供速度单位转换器，支持米/秒、千米/小时、英里/小时、节、马赫、英尺/秒等多种速度单位的转换，方便快捷。">
     <title>速度单位转换器</title>
     <link rel="stylesheet" href="/static/css/speed_converter.css">
 </head>
