--- a/app/templates/stopwatch.html
+++ b/app/templates/stopwatch.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供秒表，支持秒表计时、计次、重置等功能，方便快捷。">
     <title>秒表 - 精确计时工具</title>
     <link rel="stylesheet" href="/static/css/stopwatch.css">
 </head>
