--- a/app/templates/temperature_converter.html
+++ b/app/templates/temperature_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供温度转换器，支持摄氏度、华氏度、开尔文等多种温度单位的转换，方便快捷。">
     <title>温度转换器</title>
     <link rel="stylesheet" href="/static/css/temperature_converter.css">
 </head>
