--- a/app/templates/text.html
+++ b/app/templates/text.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
+        <meta name="description" content="资源77提供文档页面，包括ssh命令介绍、控制台命令、建站教程、Windows 11安装教程等，方便快捷。">
         <title>文档</title>
         <link rel="stylesheet" href="/static/css/project.css" />
     </head>
