--- a/app/templates/text_analyzer.html
+++ b/app/templates/text_analyzer.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供文本分析器，支持文本分析、文本统计、文本过滤、文本替换、文本排序、文本查找等功能，方便快捷。">
     <title>文本分析器</title>
     <link rel="stylesheet" href="/static/css/text_analyzer.css">
 </head>
