--- a/app/templates/text_diff.html
+++ b/app/templates/text_diff.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供文本差异对比工具，支持文本差异对比、文本差异统计、文本差异过滤、文本差异替换、文本差异排序、文本差异查找等功能，方便快捷。">
     <title>文本差异对比</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/text_diff.css') }}">
 </head>
