--- a/app/templates/text_processor.html
+++ b/app/templates/text_processor.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供文本处理工具，支持文本处理、文本统计、文本过滤、文本替换、文本排序、文本查找等功能，方便快捷。">
     <title>文本处理工具</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/text_processor.css') }}">
 </head>
