--- a/app/templates/time_converter.html
+++ b/app/templates/time_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供时间单位转换器，支持秒、分钟、小时、天、周、月、年、毫秒等多种时间单位的转换，方便快捷。">
     <title>时间单位转换器</title>
     <link rel="stylesheet" href="/static/css/time_converter.css">
 </head>
