--- a/app/templates/timer.html
+++ b/app/templates/timer.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供计时器，支持计时、倒计时、设置提醒等功能，方便快捷。">
     <title>计时器 - 倒计时工具</title>
     <link rel="stylesheet" href="/static/css/timer.css">
 </head>
