--- a/app/templates/transition.html
+++ b/app/templates/transition.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供加载中页面，方便快捷。">
     <title>加载中...</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/transition.css') }}">
 </head>
