--- a/app/templates/translator.html
+++ b/app/templates/translator.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供在线翻译工具，支持中文、英语、日语、韩语、法语、德语、西班牙语、俄语等多种语言的翻译，方便快捷。">
     <title>在线翻译</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/translator.css') }}">
 </head>
