--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供网站更新日志，包括网站更新内容、更新时间、更新视频链接等，方便快捷。">
     <title>网站更新日志</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/update.css') }}">
 </head>
