--- a/app/templates/uuid_generator.html
+++ b/app/templates/uuid_generator.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供UUID生成器，支持UUID v4和UUID v1的生成，方便快捷。">
     <title>UUID生成器</title>
     <link rel="stylesheet" href="/static/css/uuid_generator.css">
 </head>
