--- a/app/templates/volume_converter.html
+++ b/app/templates/volume_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供体积单位转换器，支持立方米、立方厘米、立方毫米、升、毫升、加仑、夸脱、品脱等多种体积单位的转换，方便快捷。">
     <title>体积单位转换器</title>
     <link rel="stylesheet" href="/static/css/volume_converter.css">
 </head>
