--- a/app/templates/weight_converter.html
+++ b/app/templates/weight_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供重量单位转换器，支持千克、克、毫克、磅、盎司、吨等多种重量单位的转换，方便快捷。">
     <title>重量单位转换器</title>
     <link rel="stylesheet" href="/static/css/weight_converter.css">
 </head>
