--- a/app/templates/word_counter.html
+++ b/app/templates/word_counter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供单词计数器，支持单词统计、单词过滤、单词排序、单词查找等功能，方便快捷。">
     <title>单词计数器 - 英文单词统计工具</title>
     <link rel="stylesheet" href="/static/css/word_counter.css">
 </head>
