--- a/app/templates/xiangqi.html
+++ b/app/templates/xiangqi.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供中国象棋游戏，支持象棋棋盘、象棋棋子、象棋规则、象棋技巧、象棋历史等功能，方便快捷。">
     <title>中国象棋</title>
     <style>
         body {
