--- a/app/templates/css_minifier.html
+++ b/app/templates/css_minifier.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供CSS压缩工具，支持CSS代码压缩、美化、合并选择器、简化颜色值、简化零值等功能，方便快捷。">
     <title>CSS压缩工具</title>
     <link rel="stylesheet" href="/static/css/css_minifier.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.7.0/styles/github.min.css">
