--- a/app/templates/date_calculator.html
+++ b/app/templates/date_calculator.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供日期计算器，支持日期间隔计算、日期加减计算、常用日期选择等功能，方便快捷。">
     <title>日期计算器</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/date_calculator.css') }}">
 </head>
