--- a/app/templates/github_chat.html
+++ b/app/templates/github_chat.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
+        <meta name="description" content="资源77提供GitHub访问提示，因国内访问GitHub速度较慢且可能被拦截，访问失败为正常现象。建议使用代理服务或镜像站点访问。">
         <title>GitHub访问提示</title>
         <link rel="stylesheet" href="/static/css/github.css" />
     </head>
