--- a/app/templates/ground.html
+++ b/app/templates/ground.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供科技感背景示例，包括背景1、背景2、背景3等，方便快捷。">
     <meta name="description" content="科技感背景示例">
     <title>科技感背景</title>
     <link rel="stylesheet" href="/static/css/ground.css">
