--- a/app/templates/html_formatter.html
+++ b/app/templates/html_formatter.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供HTML格式化工具，支持HTML代码格式化、美化、压缩、转义等功能，方便快捷。">
     <title>HTML格式化工具</title>
     <link rel="stylesheet" href="/static/css/html_formatter.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.7.0/styles/github.min.css">
