--- a/app/templates/markdown_editor.html
+++ b/app/templates/markdown_editor.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供Markdown编辑器，支持Markdown代码编辑、预览、导出、导入、格式化、美化、压缩、转义等功能，方便快捷。">
     <title>Markdown编辑器</title>
     <link rel="stylesheet" href="/static/css/markdown_editor.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.7.0/styles/github.min.css">
