--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,6 +3,7 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
+        <meta name="description" content="资源77提供注册页面，支持用户名和密码注册，方便快捷。">
         <title>注册</title>
         <link rel="stylesheet" href="/static/css/register.css" />
     </head>
