--- a/app/templates/ssh_commands.html
+++ b/app/templates/ssh_commands.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="常用SSH命令及其参数的详细说明。">
+    <meta name="description" content="资源77提供常用SSH命令及其参数的详细说明，方便快捷。">
     <title>SSH命令详解</title>
     <link rel="stylesheet" href="/static/css/ssh_commands.css">
 </head>
