--- a/app/templates/svg_editor.html
+++ b/app/templates/svg_editor.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供SVG编辑器，支持SVG代码编辑、预览、导出、导入、格式化、美化、压缩、转义等功能，方便快捷。">
     <title>SVG编辑器</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/svg_editor.css') }}">
 </head>
