--- a/app/templates/text_replacer.html
+++ b/app/templates/text_replacer.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供文本替换工具，支持文本替换、文本查找、文本过滤、文本排序、文本统计等功能，方便快捷。">
     <title>文本替换工具</title>
     <link rel="stylesheet" href="/static/css/text_replacer.css">
 </head>
