--- a/app/templates/tip_calculator.html
+++ b/app/templates/tip_calculator.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供小费计算器，支持账单金额、小费比例、分摊人数计算，方便快捷。">
     <title>小费计算器 - 餐饮小费计算工具</title>
     <link rel="stylesheet" href="/static/css/tip_calculator.css">
 </head>
