--- a/app/templates/unit_converter.html
+++ b/app/templates/unit_converter.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="资源77提供单位换算器，支持长度、面积、体积、重量、温度、速度、时间、数据大小等多种单位的转换，方便快捷。">
     <title>单位换算器</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/unit_converter.css') }}">
 </head>
