--- a/app/templates/daily.html
+++ b/app/templates/daily.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/static/css/daily.css" />
     </head>
     <body>
-        <a href="/index"><img src="/static/images/back.png"  width="32" alt="logo" /></a>
+        <a href="/"><img src="/static/images/back.png"  width="32" alt="logo" /></a>
         <div class="container">
             <h1>日常</h1>
             <p>这里是一些日常记录。</p>
