--- a/app/templates/github.html
+++ b/app/templates/github.html
@@ -17,7 +17,7 @@
                 <a href="https://github.com/felixchioa/ziyuan77-web_flask" target="_blank">
                     继续访问
                 </a>
-                <a href="/index">
+                <a href="/">
                     返回主页
                 </a>
             </div>
