--- a/app/templates/ground.html
+++ b/app/templates/ground.html
@@ -10,7 +10,7 @@
 <body>
     <h1>科技感背景</h1>
     <a href="/projects"><img src="/static/images/back.png" alt="logo" /></a>
-    <a href="/index"><img src="/static/images/home.png" alt="logo" /></a>
+    <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
     <a href="/ground1">背景1</a>
     <a href="/ground2">背景2</a>
     <a href="/ground3">背景3</a>
