--- a/app/templates/ground2.html
+++ b/app/templates/ground2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>科技感背景2</h1>
-    <a href="/index"><img src="/static/images/home_w.png" alt="logo" /></a>
+    <a href="/"><img src="/static/images/home_w.png" alt="logo" /></a>
     <a href="/ground"><img src="/static/images/back.png" alt="logo" /></a>
     <a href="https://file.ziyuan77.com/d/home/ziyuan77/ground2.js?sign=y2K2vEr8SSrK5IV4maVbejetq4RTUNhxoVjgN7SuCGM=:0" target="_blank">下载</a>
     <canvas id="ground1Canvas" width="100%" height="100%"></canvas>
