--- a/app/templates/ground3.html
+++ b/app/templates/ground3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>科技感背景3</h1>
-    <a href="/index"><img src="/static/images/home_w.png" alt="logo" /></a>
+    <a href="/"><img src="/static/images/home_w.png" alt="logo" /></a>
     <a href="/ground"><img src="/static/images/back.png" alt="logo" /></a>
     <a href="https://file.ziyuan77.com/d/home/ziyuan77/ground3.js?sign=y1R1uluT1jxOVr1kozkOzmoSGX9vgTWIKqYduJ7T2ao=:0" target="_blank">下载</a>
     <canvas id="ground1Canvas" width="100%" height="100%"></canvas>
