--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/static/css/project.css" />
     </head>
     <body>
-        <a href="/index"><img src="/static/images/back.png" alt="logo" /></a>
+        <a href="/"><img src="/static/images/back.png" alt="logo" /></a>
         <div class="container">
             <h1>项目</h1>
             <p>这里是一些项目。</p>
