--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="description" content="资源77主页，包括项目、日常、工具、资源站、博客、五子棋、常用控制台命令及其参数、网站更新、网站源码等，方便快捷。">
-        <title>主页</title>
+        <title>77资源站，提供各种有用的工具和资源</title>
         <link rel="stylesheet" href="/static/css/index.css" />
     </head>
     <body>
