--- a/app/templates/svg_editor.html
+++ b/app/templates/svg_editor.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/svg_editor.css') }}">
 </head>
 <body>
+    <h1>SVG编辑器</h1>
     <div class="editor-container">
         <div class="toolbar">
             <div class="tool-group">
