--- a/app/templates/markdown_editor.html
+++ b/app/templates/markdown_editor.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.7.0/styles/github.min.css">
 </head>
 <body>
+    <h1>Markdown编辑器</h1>
     <div class="container">
         <div class="toolbar">
             <div class="tool-group">
