--- a/app/templates/paint.html
+++ b/app/templates/paint.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/css/paint.css">
 </head>
 <body>
+    <h1>在线画图工具</h1>
     <div class="paint-container">
         <!-- 工具栏 -->
         <div class="toolbar">
