--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -42,6 +42,12 @@
                         <span>日志查看</span>
                     </a>
                 </li>
+                <li>
+                    <a href="/admin/feedback" target="admin-frame">
+                        <i class="fas fa-comment"></i>
+                        <span>反馈管理</span>
+                    </a>
+                </li>
             </ul>
             <div class="user-info">
                 <span>管理员</span>
