--- a/app/templates/daily.html
+++ b/app/templates/daily.html
@@ -33,7 +33,7 @@
                     <li>2024-11-29：开始自己建站。虽然过程艰辛，但每一步都充满了成就感。</li>
                     <li>2024-11-24：给域名解析上了。终于迈出了重要的一步。</li>
                     <li>2024-11-22：今天天气不错，心情很好。阳光明媚，心情舒畅。</li>
-                    <li>2024-11-21: 成功在同学的怂恿下建立了自己的网站，虽然很简陋，但是还是很有成就感的。顺便说一句，这是同学的网站：<a href="https://xhdndmm.cn"> xhdndmm.cn </a>。感谢朋友的鼓励与支持！</li>
+                    <li>2024-11-21: 成功建立了自己的网站，虽然很简陋，但是还是很有成就感的。感谢朋友的鼓励与支持！</li>
                 </ul>
             </ul>
         </div>
