--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,6 +35,11 @@
                     您的浏览器不支持音频元素。
                 </audio>
             </div>
+            <footer class="footer">
+                <div class="feedback-link">
+                    <a href="/feedback">提供反馈</a>
+                </div>
+            </footer>
         </div>
         <script src="/static/js/index.js"></script>
     </body>
